Plotting ground track

--- a/exploratory/compare_ATL_CTH_and_AC_TC.ipynb
+++ b/exploratory/compare_ATL_CTH_and_AC_TC.ipynb
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "353aae35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_path = 'data_AC__TC__2B/ECA_EXAC_AC__TC__2B_20250525T234738Z_20250526T014041Z_05633D.h5'\n",
+    "class_path = '../data_AC__TC__2B/ECA_EXAD_AC__TC__2B_20250612T061917Z_20250612T165848Z_05902B.h5'\n",
     "cth_path = 'data_ATL_CTH_2A/ECA_EXAE_ATL_CTH_2A_20250525T234738Z_20250526T014141Z_05633D.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "40f1c4b3",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4b5862d1",
    "metadata": {},
    "outputs": [],
